# PATCHWATCH

./: .gitignore  CLAUDE.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: pr-gate.yml  self-check.yml
patchwatch/: cli.py  models.py
patchwatch/analysis/: ast_graph.py  reachability.py  scoring.py
patchwatch/diff/: git_diff.py
patchwatch/llm/: client.py  prompts.py
patchwatch/scanners/: bandit_runner.py  semgrep_runner.py
sample_repo/: app.py
